kubernetes/Istio/jwt-authentication.yaml
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: jwt-keycloak-auth
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  jwtRules:
  - issuer:  "http://100.114.236.95:8080/realms/dev"
    jwksUri: "http://100.114.236.95:8080/realms/dev/protocol/openid-connect/certs"
 # - issuer: "http://192.168.122.154:8080/realms/dev"
 #   jwksUri: "http://192.168.122.154:8080/realms/dev/protocol/openid-connect/certs"
