kubernetes/Istio/auth-policy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: gateway-access-policy
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  rules:
  - to:
    - operation:
        paths:
          - "/api/v1/auth/*"
        methods: ["POST"]
#  - to:
#    - operation:
#        notPaths:
#          - "/api/v1/auth/*"
  - from:
    - source:
        requestPrincipals: ["*"]
